[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/8-bit Arcade In.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/MainMenu.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 58
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 1 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 0.998
margin_bottom = 0.200012

[node name="PanelContainer" type="PanelContainer" parent="CenterContainer"]
margin_left = 45.0
margin_top = 191.0
margin_right = 306.0
margin_bottom = 408.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 254.0
margin_bottom = 210.0
custom_constants/separation = 8

[node name="Label" type="Label" parent="CenterContainer/PanelContainer/VBoxContainer"]
margin_right = 247.0
margin_bottom = 39.0
custom_fonts/font = SubResource( 1 )
text = "KuberNoid"
align = 1

[node name="Buttons" type="VBoxContainer" parent="CenterContainer/PanelContainer/VBoxContainer"]
margin_top = 47.0
margin_right = 247.0
margin_bottom = 203.0
custom_constants/separation = 10

[node name="Difficulty" type="Label" parent="CenterContainer/PanelContainer/VBoxContainer/Buttons"]
margin_right = 247.0
margin_bottom = 22.0
custom_fonts/font = SubResource( 3 )
text = "Difficulty"

[node name="DifficultySelector" type="HSlider" parent="CenterContainer/PanelContainer/VBoxContainer/Buttons"]
margin_top = 32.0
margin_right = 247.0
margin_bottom = 48.0
min_value = 1.0
max_value = 3.0
value = 1.0

[node name="NewGame" type="Button" parent="CenterContainer/PanelContainer/VBoxContainer/Buttons"]
margin_top = 58.0
margin_right = 247.0
margin_bottom = 84.0
custom_fonts/font = SubResource( 2 )
text = "New Game"

[node name="Credits" type="Button" parent="CenterContainer/PanelContainer/VBoxContainer/Buttons"]
margin_top = 94.0
margin_right = 247.0
margin_bottom = 120.0
custom_fonts/font = SubResource( 2 )
text = "Credits"

[node name="Exit" type="Button" parent="CenterContainer/PanelContainer/VBoxContainer/Buttons"]
margin_top = 130.0
margin_right = 247.0
margin_bottom = 156.0
custom_fonts/font = SubResource( 2 )
text = "Exit"

[connection signal="value_changed" from="CenterContainer/PanelContainer/VBoxContainer/Buttons/DifficultySelector" to="." method="_on_DifficultySelector_value_changed"]
[connection signal="pressed" from="CenterContainer/PanelContainer/VBoxContainer/Buttons/NewGame" to="." method="_on_NewGame_pressed"]
[connection signal="pressed" from="CenterContainer/PanelContainer/VBoxContainer/Buttons/Credits" to="." method="_on_Credits_pressed"]
[connection signal="pressed" from="CenterContainer/PanelContainer/VBoxContainer/Buttons/Exit" to="." method="_on_Exit_pressed"]
